<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.elena.tourguideapp1.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MainPageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textColor="@color/headerOrange" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/cover_image"
            android:src="@drawable/main_image4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/attractions_id"
                style="@style/ActivityButtonLeft"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_corners_attractions"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageStyle"
                    android:layout_width="@dimen/front_page_icons"
                    android:layout_height="@dimen/front_page_icons"
                    android:src="@drawable/attractions_image2" />

                <TextView
                    style="@style/imageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attractions"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/food_id"
                style="@style/ActivityButtonRight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_corners_food"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageStyle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/food_image_7"/>

                <TextView
                    style="@style/imageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/shops_id"
                style="@style/ActivityButtonLeft"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_corners_shops"
                android:orientation="vertical">

                <ImageView
                    style="@style/imageStyle"
                    android:layout_width="@dimen/front_page_icons"
                    android:layout_height="@dimen/front_page_icons"
                    android:src="@drawable/shops_image3" />

                <TextView
                    style="@style/imageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shops"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/events_id"
                style="@style/ActivityButtonRight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_corners_events"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    style="@style/imageStyle"
                    android:layout_width="@dimen/front_page_icons"
                    android:layout_height="@dimen/front_page_icons"
                    android:src="@drawable/events_image2" />

                <TextView
                    style="@style/imageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
